Bug fix for history table expanding off-screen

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-html {
+html, form {
 	height: 100%;
 	background-color: #003300;
 	overflow-y: auto;
